fix overlapping navbar problems

--- a/themes/Freiberuf/static/css/custom.css
+++ b/themes/Freiberuf/static/css/custom.css
@@ -1,5 +1,3 @@
-@media (min-width: 979px) {
-    body {
-        padding-top: 50px;
+body {
+        padding-top: 70px;
     }
-}
